added information for history and fixed links

--- a/htmlPages/friends.html
+++ b/htmlPages/friends.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Friends</title>
-    <link rel="icon" href="images/favicon.png" />
+    <link rel="icon" href="../images/favicon.png" />
   </head>
   <body>
     <header>
       <h1>Scorekeep HTML Friends</h1>
-        <img src="images/friends.png" alt="Friends">
+        <img src="../images/friends.png" alt="Friends" width="100" />
       <nav>
         <menu>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="htmlPages/friends.html">Friends</a></li>
-          <li><a href="htmlPages/game.html">Game</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="friends.html">Friends</a></li>
+          <li><a href="game.html">Game</a></li>
+          <li><a href="history.html">History</a></li>
         </menu>
       </nav>
       <hr />
