--- a/htmlPages/game.html
+++ b/htmlPages/game.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friends</title>
-    <link rel="icon" href="images/favicon.png" />
+    <title>Games</title>
+    <link rel="icon" href="../images/favicon.png" />
   </head>
   <body>
     <header>
       <h1>Scorekeep HTML Game</h1>
-      <img src="images/game.png" alt="Trophy">
+      <img src="../images/trophy.png" alt="Trophy" width="100" />
       <nav>
         <menu>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="htmlPages/friends.html">Friends</a></li>
-          <li><a href="htmlPages/game.html">Game</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="friends.html">Friends</a></li>
+          <li><a href="game.html">Game</a></li>
+          <li><a href="history.html">History</a></li>
         </menu>
       </nav>
       <hr />
