--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="htmlPages/friends.html">Friends</a></li>
           <li><a href="htmlPages/game.html">Game</a></li>
+          <li><a href="htmlPages/history.html">History</a></li>
         </menu>
       </nav>
       <hr />
@@ -58,10 +59,12 @@
             <hr />
         </div>
         <!-- Logged In User view -->
-        <div id="logged-in" style="display:none;">
+        <div id="logged-in">
             <h1>Welcome Back, Username Here!</h1>
             <p>Friends: !!! amount of friends here</p>
             <p>Age: !!! This is where we use the agify.io API and display our guess of the user's age for the lolz</p>
+            <p>Games Played: !!! This is where we display the amount of games the user has played</p>
+            <p>Games Won: !!! This is where we display the amount of games the user has won</p>
             <hr />
         </div>
     </main>
