--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./css/global.css">
   </head>
   <body>
     <header>
-      <h1>Scorekeep HTML Home</h1>
-      <nav>
-        <menu>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="htmlPages/friends.html">Friends</a></li>
-          <li><a href="htmlPages/game.html">Game</a></li>
-          <li><a href="htmlPages/history.html">History</a></li>
-        </menu>
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <span class="navbar-brand">Scorekeep HTML Home</span>
+          <ul class="navbar-nav ms-auto flex-row">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="htmlPages/friends.html">Friends</a></li>
+            <li class="nav-item"><a class="nav-link" href="htmlPages/game.html">Game</a></li>
+            <li class="nav-item"><a class="nav-link" href="htmlPages/history.html">History</a></li>
+          </ul>
+        </div>
       </nav>
       <hr />
     </header>
