--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg" id="desktop-nav">
         <div class="container-fluid">
-          <span class="navbar-brand">Scorekeep HTML Home</span>
+          <span class="navbar-head">Scorekeep</span>
           <ul class="navbar-nav ms-auto flex-row">
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="htmlPages/friends.html">Friends</a></li>
@@ -25,7 +25,16 @@
           </ul>
         </div>
       </nav>
-      <hr />
+      <nav class="navbar navbar-expand-lg" id="mobile-nav">
+        <div class="container-fluid">
+          <ul class="navbar-nav ms-auto flex-row">
+            <li class="nav-item"><a class="nav-link" href="index.html"><img src="./images/home.png" alt="Home" /></a></li>
+            <li class="nav-item"><a class="nav-link" href="htmlPages/friends.html"><img src="./images/friends.png" alt="Friends" /></a></li>
+            <li class="nav-item"><a class="nav-link" href="htmlPages/trophy.html"><img src="./images/trophy.png" alt="Trophy" /></a></li>
+            <li class="nav-item"><a class="nav-link" href="htmlPages/history.html"><img src="./images/history.png" alt="History" /></a></li>
+          </ul>
+        </div>
+      </nav>
     </header>
     <main>
         <!-- New User view -->
