--- a/htmlPages/game.html
+++ b/htmlPages/game.html
@@ -37,49 +37,51 @@
     </header>
     <main>
         <!-- View if game not started, and no requests to join -->
-        <div id="no-current-games">
+        <div id="no-current-games" class="views">
             <h1>No Current Games</h1>
             <p>There are no ongoing games for you. You can start a new game, or if someone else is adding you to your game you can wait here.</p>
             <p>If something doesn't seem right, please refresh the page or make sure you're logged in.</p>
             <p>!!! This is where the websocket will be implemented for real-time updates for game invitations.</p>
-            <button>Create New Game</button>
-            <hr />
+            <button  class="btn btn-primary">Create New Game</button>
         </div>
+        <hr />
         <!-- View if game not started, and no requests to join -->
-        <div id="create-game">
+        <div id="create-game" class="views">
             <h1>Create Game</h1>
             <form action="">
                 <label for="game-name">Game Name:</label>
                 <input type="text" id="game-name" name="game-name" required />
-                <select>
-                    <option value="low">Lowest Score Wins</option>
-                    <option value="high">Highest Score Wins</option>
-                </select>
+                <div class="btn-group">
+                  <input type="radio" class="btn-check" name="btnradio" id="low" autocomplete="off" checked>
+                  <label class="btn btn-outline-primary" for="low">Lowest Score Wins</label>
+
+                  <input type="radio" class="btn-check" name="btnradio" id="high" autocomplete="off">
+                  <label class="btn btn-outline-primary" for="high">Highest Score Wins</label>
+                </div>
                 <p>!!! DB data implementation will be used here for adding your friends to the game.</p>
-                <button type="submit">Create Game</button>
+                <button type="submit" class="btn btn-success">Create Game</button>
             </form>
-            <hr />
         </div>
+        <hr />
         <!-- View if game started -->
-        <div>
+        <div id="current-game" class="views">
             <h1>Game Name Here</h1>
-            <p>For this game highest score wins</p>
+            <p>For this game <span style="text-decoration: underline;">highest score wins</span></p>
             <p>Players:</p>
-            <ul>
+            <ol class="rank">
                 <li>Player 1: Score Here</li>
                 <li>Player 2: Score Here</li>
                 <li>Player 3: Score Here</li>
                 <li>Player 4: Score Here</li>
-            </ul>
+            </ol>
             <form action="">
                 <label for="player-score">Enter Your Score:</label>
                 <input type="number" id="player-score" name="player-score" required />
-                <button type="submit">Subtract Score</button>
-                <button type="submit">Add Score</button>
+                <button type="submit" class="btn btn-danger">Subtract Score</button>
+                <button type="submit" class="btn btn-success">Add Score</button>
                 <p>!!! DB data implementation will be used here for updating the player's score.</p>
             </form>
             <p>!!! WebSocket implementation will be used here for real-time score updates.</p>
-            <hr />
         </div>
     </main>
 
