--- a/htmlPages/history.html
+++ b/htmlPages/history.html
@@ -36,21 +36,22 @@
       </nav>
     </header>
     <main>
+      <div class="views">
         <h1>Past Games</h1>
         <p>Here are your past games. Add more by playing some! If it's not working, please make sure you're logged in.</p>
         <p>!!! Game information will be here with DB data implementation.</p>
-        <br />
-        <div>
+        <div class="gameHistory">
             <h3>Game Name Here</h3>
-            <p>Ted won!</p>
-            <p>You played with:</p>
-            <ol>
+            <span class="winner">Ted WON!</span>
+            <h5>You played with:</h5>
+            <ol class="rank">
                 <li>Ted: 10</li>
                 <li>Abbie(You): 8</li>
                 <li>Josh: 5</li>
                 <li>Tris: 3</li>
             </ol>
         </div>
+      </div>
     </main>
 
     <footer>
