moved files around and used simon tutorial

--- a/htmlPages/friends.html
+++ b/htmlPages/friends.html
@@ -35,8 +35,8 @@
         </div>
       </nav>
     </header>
-    <main>
-      <div class="views">
+    <main class="views">
+      <div>
         <h1>Friends</h1>
         <p>You have no friends yet. Start by adding some! If it's not working, please make sure you're logged in.</p>
         <p>OR</p>
