--- a/htmlPages/game.html
+++ b/htmlPages/game.html
@@ -35,9 +35,9 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="views">
         <!-- View if game not started, and no requests to join -->
-        <div id="no-current-games" class="views">
+        <div id="no-current-games">
             <h1>No Current Games</h1>
             <p>There are no ongoing games for you. You can start a new game, or if someone else is adding you to your game you can wait here.</p>
             <p>If something doesn't seem right, please refresh the page or make sure you're logged in.</p>
@@ -46,7 +46,7 @@
         </div>
         <hr />
         <!-- View if game not started, and no requests to join -->
-        <div id="create-game" class="views">
+        <div id="create-game">
             <h1>Create Game</h1>
             <form action="">
                 <label for="game-name">Game Name:</label>
@@ -64,7 +64,7 @@
         </div>
         <hr />
         <!-- View if game started -->
-        <div id="current-game" class="views">
+        <div id="current-game">
             <h1>Game Name Here</h1>
             <p>For this game <span style="text-decoration: underline;">highest score wins</span></p>
             <p>Players:</p>
