--- a/htmlPages/history.html
+++ b/htmlPages/history.html
@@ -35,8 +35,8 @@
         </div>
       </nav>
     </header>
-    <main>
-      <div class="views">
+    <main class="views">
+      <div>
         <h1>Past Games</h1>
         <p>Here are your past games. Add more by playing some! If it's not working, please make sure you're logged in.</p>
         <p>!!! Game information will be here with DB data implementation.</p>
